<resources>
    <string name="app_name">Adopt me</string>
    <string name="main">Main</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="password">Jelszó</string>
    <string name="email">E-mail</string>
    <string name="petMoreButton">Tovább</string>
    <string name="exit">Kilépés</string>
    <string name="pet">Állat</string>
    <string name="myData">Adataim</string>
    <string name="myPets">Kutyáim</string>
    <string name="ownerName">Név</string>
    <string name="ownerPhone">Telefonszám</string>
    <string name="ownerAddress">Cím</string>
    <string name="ownerSite">Weboldal</string>
    <string name="modify">Módosítás</string>
    <string name="search">Keresés</string>
    <string name="description">Leírás</string>
    <string name="size_small">Kicsi</string>
    <string name="pets">Kutyák</string>
    <string name="birth_date">Születési dátum</string>
    <string name="uploadImage">Kép feltöltése</string>
    <string name="cancel">Mégse</string>
    <string name="add">Hozzáadás</string>
    <string name="edit">Módosítás</string>
    <string name="size_big">Nagy</string>
    <string name="size_medium">Közepes</string>
    <string name="size">Méret</string>
    <string name="favorite">Kedvencek</string>
    <string name="call_button">Call button</string>
    <string name="sex">Nem</string>
    <string name="age">Kor</string>
    <string name="email_subject">\"Örökbefogadási kérelem: \"</string>
    <string name="send_email">Email küldés...</string>
    <string name="sex_male">Kan</string>
    <string name="sex_female">Szuka</string>
    <string name="default_notification_channel_id">Global</string>
    <string name="name">Név</string>
    <string name="data_saved">Adatok frissítve</string>
    <string name="not_found">Nincs a keresésnek megfelelő találat</string>
    <string name="test_pet_card">petCard</string>
    <string name="test_submit_button">submitBtn</string>
    <string name="test_fab_add">AddFab</string>
    <string name="contact">Kapcsolat</string>
</resources>
