...
            val owner = petsViewModel.ownerData.value
            val isOwn = owner.id == authViewModel.user.value.id && owner.id != null
            Scaffold(floatingActionButton = {
                if (isOwn) {
                    val items: List<MultiFabItem> = listOf(
                        MultiFabItem(icon = Icons.Default.Edit,
                            label = "Edit pet",
                            color = MaterialTheme.colors.primary,
                            onClick = {
                                petsViewModel.showAddPet.value = true
                            }), MultiFabItem(icon = Icons.Default.Delete,
                            label = "Delete pet",
                            color = MaterialTheme.colors.error,
                            onClick = {
                                Log.d("deleteClicked", "true")
                                petsResponse.data.first().id?.let {
                                    coroutineScope.launch {
                                        petsViewModel.deletePet(it)
...
